--- a/index.html
+++ b/index.html
@@ -1,29 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meri Fuljadi ❤️</title>
   <style>
-    html,body{height:100%;margin:0;background:#0b0b12;font-family:Arial, sans-serif;overflow:hidden}
-    .center {
-      position:fixed;left:50%;top:50%;transform:translate(-50%,-50%);
-      text-align:center;z-index:100;color:#fff;
+    body {
+      margin: 0;
+      padding: 0;
+      background: #ffdde1;
+      font-family: Arial, sans-serif;
+      overflow-x: hidden;
+      text-align: center;
     }
-    .center h1{font-size:36px;margin:0;padding:6px 12px;border-radius:12px;background:rgba(255,0,90,0.08);text-shadow:0 6px 24px rgba(255,0,90,0.18)}
-    .message {
-      position:fixed;inset:0;padding:18px 12px;color:#ffb6c1;font-size:14px;line-height:1.6;
-      overflow:auto;z-index:10;pointer-events:none;opacity:0.95;
+
+    h1 {
+      font-size: 3em;
+      color: #ff0040;
+      margin-top: 20vh;
+      position: relative;
+      z-index: 2;
     }
-    .heart{position:fixed;top:-60px;font-size:22px;z-index:200;animation:fall linear;will-change:transform,opacity}
-    @keyframes fall{to{transform:translateY(120vh) rotate(360deg);opacity:0}}
+
+    .love-text {
+      margin-top: 30px;
+      font-size: 1.2em;
+      color: #ff3366;
+      max-width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.5em;
+    }
+
+    /* Falling hearts */
+    .heart {
+      position: fixed;
+      top: -10px;
+      color: red;
+      font-size: 24px;
+      animation: fall linear infinite;
+      z-index: 1;
+    }
+
+    @keyframes fall {
+      to {
+        transform: translateY(110vh);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="center"><h1>meri fuljadi ❤️</h1></div>
-  <div class="message" id="msg"></div>
+  <h1>Meri Fuljadi ❤️</h1>
+  <div class="love-text" id="loveText"></div>
 
   <script>
-    // the repeated message 5000 times
-    const base = "I love you the most my love 💓 ";
-    document.getElementById('msg').textContent = base.repeat
+    // Generate 5000 "I love you" messages
+    const loveText = document.getElementById("loveText");
+    let
+
