--- a/index.html
+++ b/index.html
@@ -57,5 +57,25 @@
   <script>
     // Generate 5000 "I love you" messages
     const loveText = document.getElementById("loveText");
-    let
+    let text = "";
+    for (let i = 0; i < 5000; i++) {
+      text += "I love you the most my love 💓 ";
+    }
+    loveText.innerText = text;
 
+    // Create falling hearts
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.innerText = "💖";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.animationDuration = (2 + Math.random() * 3) + "s";
+      document.body.appendChild(heart);
+
+      setTimeout(() => heart.remove(), 5000);
+    }
+
+    setInterval(createHeart, 200);
+  </script>
+</body>
+</html>
