--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     body {
       margin: 0;
       padding: 0;
-      background: #ffdde1;
+      background: url('bg.jpg') no-repeat center center fixed;
+      background-size: cover;
       font-family: Arial, sans-serif;
       overflow-x: hidden;
       text-align: center;
+      color: #fff;
     }
 
     h1 {
       font-size: 3em;
-      color: #ff0040;
       margin-top: 20vh;
+      text-shadow: 0 0 10px #ff99cc, 0 0 20px #ff66b2, 0 0 30px #ff3399;
       position: relative;
       z-index: 2;
     }
@@ -25,11 +27,14 @@
     .love-text {
       margin-top: 30px;
       font-size: 1.2em;
-      color: #ff3366;
+      color: #ffe6f0;
       max-width: 90%;
       margin-left: auto;
       margin-right: auto;
-      line-height: 1.5em;
+      line-height: 1.6em;
+      z-index: 2;
+      position: relative;
+      text-shadow: 0 0 8px #000;
     }
 
     /* Falling hearts */
@@ -40,6 +45,7 @@
       font-size: 24px;
       animation: fall linear infinite;
       z-index: 1;
+      text-shadow: 0 0 6px #fff;
     }
 
     @keyframes fall {
@@ -48,9 +54,18 @@
         opacity: 0;
       }
     }
+
+    /* Dark overlay so text is visible on bright photos */
+    .overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.4);
+      z-index: 0;
+    }
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
   <h1>Meri Fuljadi ❤️</h1>
   <div class="love-text" id="loveText"></div>
 
